--- a/Translation/item.json
+++ b/Translation/item.json
@@ -379,7 +379,7 @@
     },
     "item.type.material":{
         "en":"Material",
-        "fr":"Materiaux",
+        "fr":"Matériaux",
         "es":"",
         "ch":"",
         "kr":"",
