--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1312,5 +1312,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.back":{
+        "en":"Back",
+        "fr":"Retour",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
