--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2476,7 +2476,7 @@
         "de":"Senden",
         "jp":"",
         "pt":"",
-        "vi":"Gửi Bán",
+        "vi":"Giao Bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2548,7 +2548,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tên Người Gửi Bán",
+        "vi":"Tên Người Giao Bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2566,7 +2566,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Người Gửi Bán",
+        "vi":"Người Giao Bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2656,7 +2656,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Gửi Bán Của Tôi",
+        "vi":"Giao Bán Của Tôi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2674,7 +2674,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhấn chuột phải để giao bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5284,7 +5284,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Gửi Bán",
+        "vi":"Giao Bán",
         "ar":"",
         "it":"",
         "pl":"",
