--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2386,7 +2386,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bấm chuột trái để học",
+        "vi":"Nhấn chuột trái để học",
         "ar":"",
         "it":"",
         "pl":"",
