--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1306,7 +1306,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thông Tin",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1324,7 +1324,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Quay Lại",
         "ar":"",
         "it":"",
         "pl":"",
