--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1330,5 +1330,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.remove":{
+        "en":"Remove",
+        "fr":"Retirer",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
