--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2681,6 +2681,24 @@
         "th":"",
         "id":""
     },
+    "UI.windows.consign.add.content":{
+        "en":"You are about to add {0} to consignment. How much do you want to sell it?",
+        "fr":"Vous allez ajouter {0} a vos ventes. Combien voulez vous le vendre?",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.skills.title":{
         "en":"Skills",
         "fr":"Compétences",
