--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2692,7 +2692,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn chuẩn bị thêm {0} vào mục giao bán. Bạn muốn bán nó với giá bao nhiêu?",
         "ar":"",
         "it":"",
         "pl":"",
