--- a/Translation/item.json
+++ b/Translation/item.json
@@ -12437,6 +12437,222 @@
         "th":"",
         "id":""
     },
+    "item.10509.description":{
+        "en":"Lv. 40 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 40 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất D",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10510.description":{
+        "en":"Lv. 40 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 40 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất C",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10511.description":{
+        "en":"Lv. 40 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 40 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất B",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10512.description":{
+        "en":"Lv. 40 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 40 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10513.description":{
+        "en":"Lv. 50 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 50 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất D",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10514.description":{
+        "en":"Lv. 50 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 50 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất C",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10515.description":{
+        "en":"Lv. 50 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 50 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất B",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10516.description":{
+        "en":"Lv. 50 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 50 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10517.description":{
+        "en":"Lv. 60 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 60 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất D",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10518.description":{
+        "en":"Lv. 60 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 60 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất C",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10519.description":{
+        "en":"Lv. 60 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 60 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất B",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10520.description":{
+        "en":"Lv. 60 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 60 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "craft.levels.primary":{
         "en":"Primary",
         "fr":"Débutant",
