--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10828,7 +10828,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cà Rốt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10846,7 +10846,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nho",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10864,7 +10864,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trứng Bé",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10882,7 +10882,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sữa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10900,7 +10900,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tôm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10918,7 +10918,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đùi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10936,7 +10936,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bánh Mì",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10954,7 +10954,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nấm Tí Hon",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10972,7 +10972,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nấm Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10990,7 +10990,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nấm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12034,7 +12034,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 20 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 20 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12052,7 +12052,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 20 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12070,7 +12070,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 20 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12088,7 +12088,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 20 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12106,7 +12106,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 30 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12124,7 +12124,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 30 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12142,7 +12142,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 30 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12160,7 +12160,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 30 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12178,7 +12178,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 40 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12196,7 +12196,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 40 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12214,7 +12214,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 40 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12232,7 +12232,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 40 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12250,7 +12250,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 50 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12268,7 +12268,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 50 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12286,7 +12286,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 50 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12304,7 +12304,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 50 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12322,7 +12322,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 60 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12340,7 +12340,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 60 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12358,7 +12358,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 60 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12376,7 +12376,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 60 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12394,7 +12394,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 70 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 70 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12412,7 +12412,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 70 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 70 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12430,7 +12430,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 70 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 70 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12448,7 +12448,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 70 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 70 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12466,7 +12466,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 10 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12484,7 +12484,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 20 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 20 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12502,7 +12502,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 20 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12520,7 +12520,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 20 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12538,7 +12538,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 20 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12556,7 +12556,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 30 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12574,7 +12574,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 30 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12592,7 +12592,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 30 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12610,7 +12610,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 30 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12628,7 +12628,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 40 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12646,7 +12646,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 40 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12664,7 +12664,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 40 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12682,7 +12682,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 40 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12700,7 +12700,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 50 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12718,7 +12718,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 50 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12736,7 +12736,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 50 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12754,7 +12754,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 50 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12772,7 +12772,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất D",
+        "vi":"Nguyên Liệu Trang Bị Cấp 60 Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12790,7 +12790,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất C",
+        "vi":"Nguyên Liệu Trang Bị Cấp 60 Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12808,7 +12808,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất B",
+        "vi":"Nguyên Liệu Trang Bị Cấp 60 Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12826,7 +12826,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất A",
+        "vi":"Nguyên Liệu Trang Bị Cấp 60 Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
