--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10997,6 +10997,42 @@
         "th":"",
         "id":""
     },
+    "item.40015.name":{
+        "en":"Celebeam Root",
+        "fr":"Racine de Celebeam",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.40016.name":{
+        "en":"Celebeam Spirit",
+        "fr":"Esprit de Celebeam",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.41000.name":{
         "en":"Daily Refresh",
         "fr":"Rafraichisseur de Quêtes",
@@ -12827,6 +12863,24 @@
         "jp":"",
         "pt":"",
         "vi":"Nguyên Liệu Trang Bị Cấp 60 Tư Chất A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.40015.description":{
+        "en":"A stone that contains magical power. Used to enter someone's spirit world.",
+        "fr":"Une pierre qui contient un pouvoir magique. Utilisé pour entrer dans le monde spirituel de quelqu'un.",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
