--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11008,7 +11008,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Căn Nguyên Celebeam",
         "ar":"",
         "it":"",
         "pl":"",
