--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11026,7 +11026,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thần Thức Celebeam",
         "ar":"",
         "it":"",
         "pl":"",
