--- a/Translation/item.json
+++ b/Translation/item.json
@@ -12880,7 +12880,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Một hòn đá chứa đựng sức mạnh phép thuật. Sử dụng để vào hồn giới của một người.",
         "ar":"",
         "it":"",
         "pl":"",
