--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -522,22 +522,22 @@
         "id":"Menciptakan Perisai Sihir untuk menyerap serangan yang diterima."
     },
     "skills.mage.MAGIC_SHIELD.effect":{
-        "en":"Magic shield absorbs {0} incoming damage. Lasts up to 20 sec.",
-        "fr":"Le bouclier magique absorbe {0} dégâts. Il dure pendant 20 secondes.",
+        "en":"Magic shield absorbs {0} incoming damage. Lasts up to {1} sec.",
+        "fr":"Le bouclier magique absorbe {0} dégâts. Il dure pendant {1} secondes.",
         "es":"",
-        "ch":"魔力護盾可以吸收 {0} 的傷害. 持續20秒.",
+        "ch":"魔力護盾可以吸收 {0} 的傷害. 持續{1}秒.",
         "kr":"",
-        "ru":"Магический щит впитывает {0} получаемого урона. Действует 20 секунд.",
+        "ru":"Магический щит впитывает {0} получаемого урона. Действует {1} секунд.",
         "tr":"",
-        "de":"Magischer Schild absorbiert {0} ankommenden Schaden. Hält bis zu 20 Sekunden an.",
+        "de":"Magischer Schild absorbiert {0} ankommenden Schaden. Hält bis zu {1} Sekunden an.",
         "jp":"",
         "pt":"",
-        "vi":"Khiên ma thuật hấp thụ {0} Sát Thương nhận vào. Kéo dài đến 20 giây.",
+        "vi":"Khiên ma thuật hấp thụ {0} Sát Thương nhận vào. Kéo dài đến {1} giây.",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":"Perisai sihir menyerap sebanyak {0} setiap kerusakan yang masuk. Berlangsung selama 20 detik."
+        "id":"Perisai sihir menyerap sebanyak {0} setiap kerusakan yang masuk. Berlangsung selama {1} detik."
     },
     "skills.mage.SILENCE_CURSE.name":{
         "en":"Silence Curse",
