--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9226,7 +9226,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[D]Mảnh Kim Loại Vô Tử",
+        "vi":"[D]Mảnh Kim Loại Bất Hoại",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9244,7 +9244,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[C]Mảnh Kim Loại Vô Tử",
+        "vi":"[C]Mảnh Kim Loại Bất Hoại",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9262,7 +9262,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[B]Mảnh Kim Loại Vô Tử",
+        "vi":"[B]Mảnh Kim Loại Bất Hoại",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9280,7 +9280,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[A]Mảnh Kim Loại Vô Tử",
+        "vi":"[A]Mảnh Kim Loại Bất Hoại",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9298,7 +9298,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[D]Mảnh Kim Loại Bùng Cháy",
+        "vi":"[D]Mảnh Kim Loại Rực Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9316,7 +9316,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[C]Mảnh Kim Loại Bùng Cháy",
+        "vi":"[C]Mảnh Kim Loại Rực Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9334,7 +9334,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[B]Mảnh Kim Loại Bùng Cháy",
+        "vi":"[B]Mảnh Kim Loại Rực Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9352,7 +9352,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[A]Mảnh Kim Loại Bùng Cháy",
+        "vi":"[A]Mảnh Kim Loại Rực Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10486,7 +10486,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá Hồn",
+        "vi":"Nham Hồn",
         "ar":"",
         "it":"",
         "pl":"",
