--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2332,7 +2332,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bậc Thầy Kiếm Sư",
+        "vi":"Kiếm Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10342,7 +10342,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Bậc Thầy Kiếm Sư trong trạng thái Thanh Thản được tăng thêm 100% Tốc Độ và 200% Sát Thương Bạo Kích. Có hiệu lực trong 8 giây.",
+        "vi": "Kiếm Sư trong trạng thái Thanh Thản được tăng thêm 100% Tốc Độ và 200% Sát Thương Bạo Kích. Có hiệu lực trong 8 giây.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -10504,7 +10504,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Bậc Thầy Kiếm Sư miễn nhiễm với hiệu ứng làm Chậm và làm Choáng . Tăng 40 Tốc Độ Di Chuyển. Có hiệu lực trong 15 giây.",
+        "vi": "Kiếm Sư miễn nhiễm với hiệu ứng làm Chậm và làm Choáng . Tăng 40 Tốc Độ Di Chuyển. Có hiệu lực trong 15 giây.",
         "ar": "",
         "it": "",
         "pl": "",
