--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2422,7 +2422,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Yêu Cầu {0} Điểm Chuyên Môn tại {1}",
+        "vi":"Yêu cầu {0} Điểm Chuyên Môn tại nhánh {1}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9802,7 +9802,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Kích Thích Chiến Đấu",
+        "vi": "Khiêu Chiến",
         "ar": "",
         "it": "",
         "pl": "",
