--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -190,7 +190,7 @@
         "de":"Verzauberungen Stats",
         "jp":"",
         "pt":"",
-        "vi":"Thuộc Tính Tăng Cường",
+        "vi":"Thuộc Tính Cường Hóa",
         "ar":"",
         "it":"",
         "pl":"",
