--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2699,6 +2699,42 @@
         "th":"",
         "id":""
     },
+    "item.2003.name":{
+        "en":"Storm Array - Weapon",
+        "fr":"Tempête - Arme",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2004.name":{
+        "en":"Storm Array - Chestplate",
+        "fr":"Tempête - Plastron",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.3000.name":{
         "en":"[Spirit Egg] Pudding Slime",
         "fr":"[Oeuf d'esprit] Slime Pudding",
