--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -268,5 +268,59 @@
         "pl": "",
         "th": "",
         "id": ""
+    },
+    "instance.INSTANCE_35.name":{
+        "en": "City’s Poisonous Fog",
+        "fr": "Brouillard Toxic de la Ville",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_35.description.reward.normal":{
+        "en": "Lv30 common materials, Costume sets and Runestones.",
+        "fr": "Materiel commun Nv30, Costumes et Pierres runiques",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "Nguyên liệu thường Cấp 30, Bộ Trang Phục và Đá Cổ Ngữ.",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_35.description.reward.special":{
+        "en": "Glory Gem",
+        "fr": "Gemme de Gloire",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "Đá Vinh Quang",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
     }
 }
