--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2718,8 +2718,98 @@
         "id":""
     },
     "item.2004.name":{
-        "en":"Storm Array - Chestplate",
-        "fr":"Tempête - Plastron",
+        "en":"Storm Array - Armor",
+        "fr":"Tempête - Armure",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2005.name":{
+        "en":"Miser - Helmet",
+        "fr":"Avare - Casque",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2006.name":{
+        "en":"Miser - Armor",
+        "fr":"Avare - Casque",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2007.name":{
+        "en":"Miser - Belt",
+        "fr":"Avare - Ceinture",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2008.name":{
+        "en":"Miser - Boots",
+        "fr":"Avare - Bottes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2009.name":{
+        "en":"Miser - Cape",
+        "fr":"Avare - Cape",
         "es":"",
         "ch":"",
         "kr":"",
